# fastapi-agent-blueprint

./: .claudeignore  .codexignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  config.yml  docker-compose.yml  pyproject.toml  run_app_local.py  run_microservice.py  run_server_local.py  skill.md  test_taskiq.py
.agents/skills/add-admin-page/: SKILL.md
.agents/skills/add-api/: SKILL.md
.agents/skills/add-cross-domain/: SKILL.md
.agents/skills/add-worker-task/: SKILL.md
.agents/skills/fix-bug/: SKILL.md
.agents/skills/migrate-domain/: SKILL.md
.agents/skills/new-domain/: SKILL.md
.agents/skills/onboard/: SKILL.md
.agents/skills/plan-feature/: SKILL.md
.agents/skills/review-architecture/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.agents/skills/security-review/: SKILL.md
.agents/skills/sync-guidelines/: SKILL.md
.agents/skills/test-domain/: SKILL.md
.claude/: settings.json
.claude/hooks/: check-required-plugins.sh  post-tool-format.sh  post-tool-sync-warning.sh  pre-tool-security.sh  pre_tool_security.py  stop-sync-reminder.sh
.claude/rules/: architecture-conventions.md  commands.md  project-overview.md  project-status.md
.claude/skills/_shared/: project-dna.md
.claude/skills/add-admin-page/: SKILL.md
.claude/skills/add-api/: SKILL.md
.claude/skills/add-cross-domain/: SKILL.md
.claude/skills/add-worker-task/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/fix-bug/: SKILL.md
.claude/skills/migrate-domain/: SKILL.md
.claude/skills/new-domain/: SKILL.md
.claude/skills/new-domain/references/: scaffolding-layers.md
.claude/skills/onboard/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/review-architecture/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/sync-guidelines/: SKILL.md
.claude/skills/test-domain/: SKILL.md
.codex/: config.toml  hooks.json
.codex/hooks/: _shared.py  post-tool-format.py  pre-tool-security.py  session-start.py  stop-sync-reminder.py  user-prompt-submit.py
.codex/rules/: fastapi-agent-blueprint.rules
.github/: pull_request_template.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: architecture_conventions.md  project_overview.md  refactoring_status.md  suggested_commands.md
_docker/: prod.Dockerfile
_env/: dev.env  local.env.example  stg.env
core/application/dtos/: base.py
core/application/services/: base_service.py
core/domain/entities/: entity.py
core/infrastructure/database/: database.py
core/infrastructure/di/: container.py
core/infrastructure/repositories/: base_repository.py
docs/: README.ko.md
docs/ai/shared/: architecture-review-checklist.md  drift-checklist.md  planning-checklists.md  project-dna.md  repo-facts.md  scaffolding-layers.md  security-checklist.md  test-patterns.md
docs/history/: 000-rabbitmq-to-celery.md  001-celery-to-taskiq.md  002-serena-adoption.md  003-response-request-pattern.md  004-dto-entity-responsibility.md  005-poetry-to-uv.md  006-ddd-layered-architecture.md  007-di-container-and-app-separation.md  008-deploy-env-separation.md  009-async-external-clients.md  010-code-quality-tools.md  011-3tier-hybrid-architecture.md  012-ruff-migration.md  013-why-ioc-container.md  014-omc-vs-native-orchestration.md  016-worker-payload-schema.md  017-exception-handling-strategy.md  018-domain-event-removal.md  020-aidd-skills-governance.md  023-object-storage-unification.md  024-session-lifecycle-management.md  026-nicegui-admin-dashboard.md  README.md
migrations/: env.py  env_utils.py
migrations/dynamodb/: cli.py  migrator.py  scanner.py
server/: app.py
server/infrastructure/di/: container.py
src/: app.py  bootstrap.py  celery_app.py  celery_bootstrap.py
src/_apps/admin/: bootstrap.py
src/_apps/admin/pages/: login.py  (+1 more)
src/_apps/server/: app.py  bootstrap.py
src/_apps/worker/: app.py  bootstrap.py  broker.py
src/_core/: config.py
src/_core/common/: dto_utils.py  pagination.py
src/_core/exceptions/: base_exception.py  exception_handlers.py
src/_core/infrastructure/: discovery.py
src/_core/middleware/: exception_middleware.py
src/chat/: app.py
src/core/common/: dto_utils.py  pagination.py
src/core/exceptions/: base_exception.py
src/core/middleware/: exception_middleware.py
src/server/: app.py
src/user/: app.py
src/user/server/: app.py
tests/: conftest.py
tests/factories/: user_factory.py
tests/unit/_core/: test_config.py
(+143 files in other folders)
