[project]
name = "fastapi-layered-architecture"
version = "0.1.0"
description = "This is layered architecture for fastapi"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiohttp>=3.13.0",
    "aiomysql>=0.2.0",
    "alembic>=1.15.2",
    "boto3>=1.39.12",
    "celery>=5.5.3",
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "locust>=2.37.11",
    "minio>=7.2.15",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "sqladmin[full]>=0.21.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.1",
]
