[project]
name = "fastapi-agent-blueprint"
version = "0.3.0"
description = "FastAPI DDD template, built for AI agent backends — zero-boilerplate CRUD, auto domain discovery, async architecture"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aioboto3>=15.4.0",
    "aiohttp>=3.13.0",
    "aiomysql>=0.2.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "boto3>=1.39.12",
    "dependency-injector>=4.46.0",
    "email-validator>=2.0.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "nicegui>=3.5.0",
    "sqlalchemy>=2.0.40",
    "taskiq[reload]>=0.12.1",
    "semantic-text-splitter>=0.17.0",
    "uvicorn>=0.34.1",
]

[project.optional-dependencies]
sqs = ["taskiq-aws>=0.4.0"]
rabbitmq = ["taskiq-aio-pika>=0.4.0"]
openai = ["openai>=1.0.0", "tiktoken>=0.7.0"]

[project.urls]
Homepage = "https://github.com/Mr-DooSun/fastapi-agent-blueprint"
Repository = "https://github.com/Mr-DooSun/fastapi-agent-blueprint"
Issues = "https://github.com/Mr-DooSun/fastapi-agent-blueprint/issues"
Changelog = "https://github.com/Mr-DooSun/fastapi-agent-blueprint/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "anyio[asyncio]>=4.0.0",
    "locust>=2.37.11",
    "pip-audit>=2.10.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.7",
    "types-aiobotocore-dynamodb>=2.25.0",
    "types-aiobotocore-s3>=2.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# === Ruff Configuration ===
[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "UP",   # pyupgrade
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit
]
ignore = [
    "F841",   # local variable assigned but never used
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top
    "F401",   # unused import
    "B008",   # function call in default argument
    "B006",   # mutable default argument
    "C901",   # too complex
    "SIM102", # use single if instead of nested if
    "SIM114", # combine if branches with same body
    "SIM117", # multiple with statements
    "SIM910", # use dict.get(key) instead of dict.get(key, None)
    "B904",   # raise without from inside except
    "UP046",  # non-PEP695 generic class
    "S113",   # request without timeout (was bandit B113)
    "S314",   # use of xml.etree.ElementTree (was bandit B314)
    "S413",   # use of pycrypto (was bandit B413)
    "S607",   # starting process with partial executable path
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"**/routers/*.py" = ["B008"]
"**/workflows/*.py" = ["B006"]
"tests/**/*.py" = ["S"]
"*_test.py" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
